--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ dependencies = [
     "uvicorn[standard]>=0.32,<0.33",
     "langgraph>=0.2,<0.3",
     "langchain>=0.3,<0.4",
-    "langchain-anthropic>=0.2,<0.3",
+    "langchain-google-genai>=2.0,<3.0",
     "python-dotenv>=1.0,<2.0",
     "pydantic>=2.10,<3.0",
     "pydantic-settings>=2.6,<3.0",
@@ -18,9 +18,8 @@ dependencies = [
 
 [project.optional-dependencies]
 dev = [
-    "pytest>=8.3,<9.0",
-    "pytest-asyncio>=0.24,<0.25",
-    "black>=24.10,<25.0",
+    "pytest>=8.0,<9.0",
+    "black>=24.0,<25.0",
     "ruff>=0.8,<0.9",
 ]
 
@@ -36,10 +35,3 @@ where = ["src"]
 
 [tool.black]
 line-length = 88
-target-version = ["py311"]
-
-[tool.ruff]
-line-length = 88
-target-version = "py311"
-select = ["E", "F", "I", "B"]
-ignore = ["E501"]
