--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 # Example environment variables
 # APP_ENV=development
 
+# Google Gemini API key (required for ProjectArchitectAgent)
+GOOGLE_API_KEY=your-gemini-api-key-here
+
