--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ dependencies = [
     "langgraph>=0.2,<0.3",
     "langchain>=0.3,<0.4",
     "langchain-anthropic>=0.2,<0.3",
+    "langchain-google-genai>=2.0,<3.0",
+    "langchain-openai>=0.2,<0.3",
     "python-dotenv>=1.0,<2.0",
     "pydantic>=2.10,<3.0",
     "pydantic-settings>=2.6,<3.0",
