feat(architect): prompts, rationale, Mermaid validation, test output, progress logs
Project Architect agent
- Tech stack: prompt asks for specific frameworks (e.g. React 18 + TypeScript,
  FastAPI Python 3.11) and optional explanation; parse and store in
  ArchitectureDefinition.tech_stack_rationale; show in summary and output files.
- Diagram prompts: edge labels pipe-only (-->|label|), no parentheses in edge
  labels; node labels with parentheses must be quoted (N["Label (x)"]).
- Mermaid sanitizer: _sanitize_mermaid_flowchart() quotes node labels with ( )
  and strips parentheses from edge labels to avoid parse errors.
- Mermaid validator: src/utils/mermaid_validator.py compiles via
  npx @mermaid-js/mermaid-cli; returns (success, error_message). If invalid,
  retry once with validator error in LLM prompt; fallback to DiagramGenerator.
  Optional when npx not available.
- Progress logs: [1/4]..[4/4] and [diagram] Validating ... (mmdc) in process()
  with flush=True.

Integration test
- Full output to test_output/: architect_full_output_<ts>_<label>.txt,
  system_diagram_*.mmd, erd_diagram_*.mmd. test_output/ in .gitignore.
- SIMPLE_REQUIREMENTS and COMPLEX_REQUIREMENTS; run mode simple | complex | both
  (default both). Use simple to reduce LLM calls when quota is tight.

State
- project_state.ArchitectureDefinition: add tech_stack_rationale (Optional[str]).

.gitignore
- docs/changelog-session-2026-02-08.md and CHANGELOG.md (local changelog only).

--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,7 @@ Thumbs.db
 .pytest_cache/
 .coverage
 htmlcov/
+test_output/
 
 # Logs
 *.log
@@ -54,5 +55,7 @@ htmlcov/
 *.sqlite
 *.sqlite3
 
-# Local project docs
+# Local project docs (changelog for personal/session use only)
 docs/changelog.md
+docs/changelog-session-2026-02-08.md
+CHANGELOG.md
