--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ dependencies = [
     "pydantic-settings>=2.6,<3.0",
     "httpx>=0.27,<0.28",
     "tenacity>=9.0,<10.0",
+    "faiss-cpu>=1.7,<2.0",
+    "sentence-transformers>=2.2,<3.0",
 ]
 
 [project.optional-dependencies]
