feat(mermaid-rag): vector store metadata, Firecrawl ingestion, scripts, tests
- VectorStore: per-chunk metadata, query_text_with_metadata(meta_filter), save/load
- data/mermaid_docs/sources.json + ingest script (flowchart, erd, syntax)
- scripts/query_mermaid_store.py; chunk_markdown in src/utils
- tests/vector_store (ingest pipeline, store query); data/vector_stores in .gitignore

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@
 # Google Gemini API key (required for ProjectArchitectAgent)
 GOOGLE_API_KEY=your-gemini-api-key-here
 
+# Firecrawl API key (required for FirecrawlClient)
+FIRECRAWL_API_KEY=your-firecrawl-api-key-here
