--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "tenacity>=9.0,<10.0",
     "faiss-cpu>=1.7,<2.0",
     "sentence-transformers>=2.2,<3.0",
+    "firecrawl-py>=4.0,<5.0",
 ]
 
 [project.optional-dependencies]
