--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@
 
 # Google Gemini API key (required for ProjectArchitectAgent)
 GOOGLE_API_KEY=your-gemini-api-key-here
+GEMINI_API_KEY=your-gemini-api-key-here
 
 # Firecrawl API key (required for FirecrawlClient)
 FIRECRAWL_API_KEY=your-firecrawl-api-key-here
