--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,12 +13,13 @@ dependencies = [
     "langchain-openai>=0.2,<0.3",
     "python-dotenv>=1.0,<2.0",
     "pydantic>=2.10,<3.0",
-    "pydantic-settings>=2.6,<3.0",
+    "pydantic-settings>=2.13,<3.0",
     "httpx>=0.27,<0.28",
     "tenacity>=9.0,<10.0",
     "faiss-cpu>=1.7,<2.0",
     "sentence-transformers>=2.2,<3.0",
     "firecrawl-py>=4.0,<5.0",
+    "playwright>=1.40,<2.0",
 ]
 
 [project.optional-dependencies]
