--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ dependencies = [
     "faiss-cpu>=1.7,<2.0",
     "sentence-transformers>=2.2,<3.0",
     "firecrawl-py>=4.0,<5.0",
+    "markdown",
+    "weasyprint",
 ]
 
 [project.optional-dependencies]
